--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,11 @@
     "require-dev": {
         "guzzlehttp/guzzle": "^6.3 || ^7.0",
         "phpunit/phpunit": ">=7.0 < 10"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/yallow-com/WhatsAppAPI.git"
+        }
+    ]
 }
